--- a/package.json
+++ b/package.json
@@ -12,29 +12,15 @@
 		"Other"
 	],
 	"activationEvents": [
-        "onCommand:wjsoncleaner-and-formatter.helloWorld",
-		"onCommand:wjsoncleaner-and-formatter.cleanJson",
-		"onCommand:wjsoncleaner-and-formatter.formatJson",
-		"onCommand:wjsoncleaner-and-formatter.cleanAndFormatJson"
+        "onCommand:wjsoncleaner-and-formatter.helloWorld"
+		,"onCommand:wjsoncleaner-and-formatter.cleanJson"
 	],
 	"main": "src/extension.js",
 	"contributes": {
-		"commands": [{
-            "command": "wjsoncleaner-and-formatter.helloWorld",
-            "title": "Hello World"
-
-		},
+		"commands": [
 		{
 			"command": "wjsoncleaner-and-formatter.cleanJson",
-			"title": "WJCF - Clean Json"
-		},
-		{
-			"command": "wjsoncleaner-and-formatter.formatJson",
-			"title": "WJCF - Format Json"			
-		},
-		{
-			"command": "wjsoncleaner-and-formatter.cleanAndFormatJson",
-			"title": "WJCF - Clean & Format"			
+			"title": "WJC - Clean Json"
 		}]
 	},
 	"scripts": {
