--- a/wjsoncleaner-and-formatter-ts/package.json
+++ b/wjsoncleaner-and-formatter-ts/package.json
@@ -2,6 +2,7 @@
 	"name": "wjsoncleaner",
 	"displayName": "WJsonCleaner",
 	"description": "This extension aims at easily cleaning and formatting JSON files we may found daily working on our project.",
+	"icon": "images/iconito.png",
 	"version": "1.0.0",
 	"publisher": "Alberto Sánchez Merino",
 	"repository": "https://github.com/Albernano1/wjsoncleaner-and-formatter.git",
@@ -12,8 +13,8 @@
 		"Other"
 	],
 	"activationEvents": [
-        "onCommand:wjsoncleaner.helloWorld"
-		,"onCommand:wjsoncleaner.cleanJson"
+		"onCommand:wjsoncleaner.helloWorld",
+		"onCommand:wjsoncleaner.cleanJson"
 	],
 	"main": "./out/extension.js",
 	"contributes": {
@@ -25,7 +26,11 @@
 		]
 	},
 	"scripts": {
-		"vscode:prepublish": "npm run compile",
+		"vscode:prepublish": "npm run esbuild-base -- --minify",
+		"esbuild-base": "esbuild ./src/extension.ts --bundle --outfile=out/main.js --external:vscode --format=cjs --platform=node",
+		"esbuild": "npm run esbuild-base -- --sourcemap",
+		"esbuild-watch": "npm run esbuild-base -- --sourcemap --watch",
+		"test-compile": "tsc -p ./",
 		"compile": "tsc -p ./",
 		"watch": "tsc -watch -p ./",
 		"pretest": "npm run compile && npm run lint",
@@ -33,16 +38,17 @@
 		"test": "node ./out/test/runTest.js"
 	},
 	"devDependencies": {
-		"@types/vscode": "^1.64.0",
 		"@types/glob": "^7.2.0",
 		"@types/mocha": "^9.0.0",
 		"@types/node": "14.x",
+		"@types/vscode": "^1.64.0",
 		"@typescript-eslint/eslint-plugin": "^5.9.1",
 		"@typescript-eslint/parser": "^5.9.1",
+		"@vscode/test-electron": "^2.0.3",
+		"esbuild": "^0.14.23",
 		"eslint": "^8.6.0",
 		"glob": "^7.2.0",
 		"mocha": "^9.1.3",
-		"typescript": "^4.5.4",
-		"@vscode/test-electron": "^2.0.3"
+		"typescript": "^4.5.4"
 	}
 }
