--- a/wjsoncleaner-and-formatter-ts/package.json
+++ b/wjsoncleaner-and-formatter-ts/package.json
@@ -23,7 +23,39 @@
 				"command": "wjsoncleaner.cleanJson",
 				"title": "WJC - Clean Json"
 			}
+		],
+		"configuration":[
+			{
+				"title": "WJC(WayletJsonCleaner)",
+				"properties": {
+					"wjc.textReplacments":{
+						"description": "List of text replacements to do on cleaning process:",
+						"scope": "application",
+						"editPresentation": "multilineText",
+						"type":"object",
+						"default":{
+							"replacements":{
+								"///*" : "*",
+								"///\"" : "\"",
+								"//\"" : "\"",
+								"/\"" : "\"",
+								"\"{" : "{",
+								"}\"" : "}",
+								"\"[" : "[",
+								"]\"" : "]",
+								"///r///n" : " ",
+								"///n" : " ",
+								"//r//n" : " ",
+								"//n" : " ",
+								"/r/n" : " ",
+								"/n" : " "
+							}
+						}
+					}
+				}
+			}
 		]
+	
 	},
 	"scripts": {
 		"vscode:prepublish": "npm run esbuild-base -- --minify",
