Saving temp changes, getting close but configuration file is not as expected

--- a/jsoncleaner-and-formatter-ts/package.json
+++ b/jsoncleaner-and-formatter-ts/package.json
@@ -27,9 +27,9 @@
 			{
 				"title": "JC(JsonCleaner)",
 				"properties": {
-					"wjc.textReplacments":{
+					"jc.textReplacments":{
 						"description": "List of text replacements to do on cleaning process:",
-						"scope": "application",
+						"scope": 1,
 						"editPresentation": "multilineText",
 						"type":"object",
 						"default":{
